fixed autoscrolling to bottom and removed horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@ h1, h2, h3, p, a, li, label, input {
 }
 
 .chatbox-body .chatbox-left .users {
-  overflow: scroll;
+  overflow-y: scroll;
   height: 79%;
 }
 
@@ -182,7 +182,7 @@ h1, h2, h3, p, a, li, label, input {
 }
 
 .chatbox-body .chatbox-right .messages {
-  overflow: scroll;
+  overflow-y: scroll;
   min-height: 70vh;
   max-height: 70vh;
   max-width: 70vw;
